# ServerRes

./: .gitignore  README.md  config  main.lua
clib/: test.lua
clib/csrc/: CMakeLists.txt
clib/csrc/BufferReader/: BufferReader.cpp
clib/csrc/GSRecastNavigation/Detour/: CMakeLists.txt
clib/csrc/GSRecastNavigation/DetourTileCache/: CMakeLists.txt
clib/csrc/GSRecastNavigation/LRiman/: CMakeLists.txt
clib/csrc/GSRecastNavigation/LRiman/Include/: Scene.h
clib/csrc/GSRecastNavigation/LRiman/Source/: InputGeom.cpp  Sample.cpp  Sample_SoloMesh.cpp  Share.cpp  main.cpp
clib/csrc/GSRecastNavigation/Recast/: CMakeLists.txt
clib/csrc/Help/: CMakeLists.txt  help.h
core/: buffer.lua  proto.lua  serviceCore.lua  serviceMap.lua  timer.lua  timerCore.lua  vec3.lua
csrc/: CMakeLists.txt
csrc/Aoi/: Aoi.cpp  Aoi.h  AoiContext.cpp  AoiContext.h  AoiTrigger.cpp  AoiTrigger.h  CMakeLists.txt  TriggerMarker.cpp  TriggerMarker.h  aoi.c  aoi.h  lua.cpp  luashare.cpp  test.cpp
csrc/Aoi/tower/: tower-aoi.c
csrc/BufferReader/: BufferReader.cpp  CMakeLists.txt
csrc/Csvparse/: CMakeLists.txt  Csvparse.cpp
csrc/GSRecastNavigation/: .gitignore  CMakeLists.txt  README.md
csrc/GSRecastNavigation/DebugUtils/: CMakeLists.txt
csrc/GSRecastNavigation/Detour/Source/: DetourNavMeshQuery.cpp
csrc/GSRecastNavigation/DetourCrowd/: CMakeLists.txt
csrc/GSRecastNavigation/LRiman/: CMakeLists.txt
csrc/GSRecastNavigation/LRiman/Include/: Context.h  Sample.h  Sample_SoloMesh.h
csrc/GSRecastNavigation/LRiman/Source/: Context.cpp  NavMeshTesterTool.cpp  Sample.cpp  Sample_SoloMesh.cpp  Scene.cpp  Share.cpp
csrc/GSRecastNavigation/Recast/Source/: Recast.cpp
csrc/Help/: CMakeLists.txt  help.cpp  help.h
csrc/LAoi/: CMakeLists.txt  luashare.cpp  main.cpp
csrc/LAoi/backward-cpp/: BackwardConfig.cmake  CMakeLists.txt  backward.hpp
csrc/LAoi/backward-cpp/test/: _test_main.cpp
csrc/Lua/: CMakeLists.txt
logic/bag/: bag.lua  bagCode.lua  bagObj.lua  bagQueryApi.lua  bag_data.lua  csv.lua
logic/common/: code.lua  mysql.lua
logic/config/: config.lua  skillConfig.lua
logic/login/: user.lua  userMap.lua
logic/mysql/: mysql.lua  mysqlHelp.lua  mysqlWDog.lua
logic/net/: serviceMap copy.lua  serviceMap.lua  user.lua  userHelp.lua
logic/scene/: aoi.lua  brocastMsgMap.lua  item.lua  nav.lua  player.lua  scene.lua  sceneHelp.lua  sceneMap.lua  sceneQuery.lua  vec3.lua
logic/scene/ai/: bTree.lua  behaviorTree.lua  eqs.lua  model.lua  robot.lua  robotBehavior.lua
logic/skill/: skillMap.lua
logic/statu/: player.lua  playerMap.lua  statuMap.lua
protos/: make.sh
protos/pb/: Account.pb  Person.pb  Scene.pb  Test.pb
protos/raw/: Account.proto  Person.proto  Scene.proto
service/: agent.lua  bagService.lua  connection copy 2.lua  connection copy.lua  connection.lua  loginService.lua  mysqlService.lua  pointService.lua  sceneService.lua  skillService.lua  statuService.lua  testService.lua  userAgent.lua  watchdog.lua
service/account/: loginService.lua
service/net/: connection.lua  loginService.lua  userAgent.lua
service/scene/: sceneService.lua
service/test/: testService.lua
static/btree/: mm2.ai  monster.ai  test.ai
static/config/: CommonItem.csv  SkillConfig.csv
static/eqs/: TestLab.eqs  TestLab1.eqs
static/protos/: make.sh  make2.sh
static/protos/pb/: Account.pb  Bag.pb  Eqs.pb  Monster.pb  Scene.pb  Skill.pb  Statu.pb  Test.pb
static/protos/raw/: Account.proto  Bag.proto  Eqs.proto  Monster.proto  Scene.proto  Skill.proto  Statu.proto  Test.proto
test/: readbuffer.lua
